Fix card collapsing on smaller screens

--- a/plant-tracker-ui/src/assets/styles/index.css
+++ b/plant-tracker-ui/src/assets/styles/index.css
@@ -63,9 +63,7 @@
     @apply flex-wrap;
     @apply flex-row;
     @apply flex-auto;
-    @apply items-start;
-    @apply pl-14;
-    @apply pr-8;
+    @apply justify-center;
   }
 
   .card {
